fixed overflow scroll issue

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,7 +7,7 @@
   padding-right: 5px;
 }
 .content-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: self-start;
@@ -35,16 +35,19 @@
 .img-skill-container img {
   box-shadow: 8px 8px 5px var(--secondary);
   width: 100%;
+  max-width: 500px;
   aspect-ratio: 1/1.3;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 .skills-resume-container {
   width: 100%;
+  max-width: 700px;
+  justify-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-
   align-self: center;
 }
 .skills-resume-container h3 {
@@ -59,9 +62,13 @@
   margin-bottom: 2rem;
 }
 .skills li {
-  flex-grow: 1;
   text-align: center;
   font-size: 0.9rem;
+  padding: 8px 12px;
+  background-color: var(--secondary);
+  border-radius: 8px;
+  color: white;
+  user-select: none;
 }
 .skills-resume-container button {
   padding: 0.8rem;
@@ -76,14 +83,6 @@
 
 .skills-resume-container button:hover {
   opacity: 0.8;
-}
-
-.skills li {
-  padding: 5px 8px;
-  background-color: var(--secondary);
-  border-radius: 8px;
-  color: white;
-  user-select: none;
 }
 
 .about-me {
