--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -95,6 +95,3 @@
   letter-spacing: 1px;
   font-weight: 600;
 }
-
-@media screen and (max-width: 950px) {
-}
